--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,7 @@ html {
 body {
   background-color: #060819;
   font-feature-settings: "palt";
+  font-family: "Nico Moji";
 }
 
 .contents__wrapper {
@@ -21,13 +22,13 @@ body {
 .contents__title {
   margin: 8px auto;
   color: #fff;
-  font-size: 2.4rem;
+  font-size: 3rem;
 }
 
 @media screen and (min-width: 768px) {
   .contents__title {
     margin-bottom: 40px;
-    font-size: 3rem;
+    font-size: 4rem;
   }
 }
 
@@ -83,6 +84,13 @@ body {
   font-weight: bold;
 }
 
+@media screen and (min-width: 768px) {
+  .cardBox__title {
+    font-size: 3rem;
+  }
+}
+
+
 .cardBox__title--you {
   color: rgb(42, 16, 243);
 }
@@ -97,8 +105,15 @@ body {
 }
 
 .cardBox__imgContainer {
-  width: 80%;
-  margin: 40px auto 0;
+  width: 90%;
+  margin: 20px auto 0;
+}
+
+@media screen and (min-width: 768px) {
+  .cardBox__imgContainer {
+    width: 60%;
+    margin: 40px auto 0;
+  }
 }
 
 .cardBox__imgContainer > img {
@@ -110,9 +125,15 @@ body {
   font-size: 1.8rem;
 }
 
+@media screen and (min-width: 768px) {
+  .cardBox__hand {
+    font-size: 2.5rem;
+  }
+}
+
 .card__title {
   margin-bottom: 8px;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -141,16 +162,16 @@ body {
 
 .navigation__button {
   display: block;
-  font-size: 1.1rem;
+  font-size: 2.4rem;
   padding: 8px;
-  border: 1px solid #fff;
+  border: 3px solid #fff;
   border-radius: 5px;
   color: #fff;
 }
 
 @media screen and (min-width: 768px) {
   .navigation__button {
-    font-size: 1.6rem;
+    font-size: 3.2rem;
     padding: 12px 16px;
     border: none;
   }
